--- a/Public/Skin/Home/news/style/style.css
+++ b/Public/Skin/Home/news/style/style.css
@@ -1,5 +1,5 @@
 /*page*/
-.dogo-page {height:auto;background: url(../images/Shriver_BG.jpg) repeat-x 0 0;}
+.dogo-page {}
 
 /*header
 .dogo-header .navbar{background-image: -webkit-linear-gradient(top,#343742 0,#343742 100%);
