--- a/Public/Skin/Home/news/style/common.css
+++ b/Public/Skin/Home/news/style/common.css
@@ -11,10 +11,12 @@ a:hover{text-decoration:none;color: #FF6347;}
 .dogo-border{border: 1px solid #ccc;}/*临时设置最小高度*/
 .dogo-pdtop1{padding-top: 5px;}
 .dogo-pdtop2{padding-top: 10px;}
+.dogo-pd0{padding: 0px;}
 .dogo-pd10{padding: 10px;}
 .dogo-pd510{padding:5px 10px;}
 .dogo-pd515{padding:5px 15px;}
 .dogo-pd15{padding: 15px;}
+.dogo-mg0{padding: 0px;}
 .dogo-mr15{margin-right: 15px;}
 .dogo-blank{ height:10px;margin: 0;padding: 0;}
 
@@ -64,9 +66,41 @@ a:hover{text-decoration:none;color: #FF6347;}
 .dogo-box-footer .btn-default{
     background-image:none;
 }
-.dogo-test{height: 300px;background: #096;}
+.dogo-test{height: 200px;margin: 10px 0;}
 
 
 .dogo-dialog-modal .modal-content{border: 10px solid rgba(48, 48, 48, 0.7);border-radius: 8px;box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);}
+
+
+/*dogo-lemon 柠檬色*/
+.dogo-lemon{background: rgb(247,208,67);}
+.dogo-rgba-lemon{background: rgba(247,208,67,1);}
+/*dogo-orange 橙色*/
+.dogo-orange{background: rgb(232,92,51);}
+.dogo-rgba-orange{background: rgba(232,92,51,1);}
+
+/*dogo-gray 灰色*/
+.dogo-gray{background: rgb(239,237,235);}
+.dogo-rgba-gray{background: rgba(239,237,235,1);}
+
+/*dogo-purple 紫色*/
+.dogo-purple{background: rgb(54,17,100);}
+.dogo-rgba-purple{background: rgba(54,17,100,1);}
+
+/*dogo-light-green 浅绿色*/
+.dogo-light-green{background: rgb(31,166,122);}
+.dogo-rgba-light-green{background: rgba(31,166,122,1);}
+
+/*dogo-blue 蓝色*/
+.dogo-blue{background: rgb(45,137,239);}
+.dogo-rgba-blue{background: rgba(45,137,239,1);}
+
+/*dogo-black 黑色*/
+.dogo-black{background: rgb(23,26,31);}
+.dogo-rgba-black{background: rgba(23,26,31,1);}
+/*dogo-pink 粉色*/
+.dogo-pink{background: #EF4372;}
+.dogo-rgba-pink{background: rgba(23,26,31,1);}
+
 
 
