信息发表、会员中心信息展示

--- a/Public/Skin/User/default/style/common.css
+++ b/Public/Skin/User/default/style/common.css
@@ -7,86 +7,61 @@ a:hover{text-decoration:none;color: #FF6347;}
 
 /*img,input,li{ vertical-align:middle;}*/
 
-.dogo-wp{ }
+.dogo-wp{}
 .dogo-border{border: 1px solid #ccc;}/*临时设置最小高度*/
 .dogo-pdtop1{padding-top: 5px;}
 .dogo-pdtop2{padding-top: 10px;}
 .dogo-pd10{padding: 10px;}
+.dogo-pd510{padding:5px 10px;}
+.dogo-pd515{padding:5px 15px;}
 .dogo-pd15{padding: 15px;}
 .dogo-mr15{margin-right: 15px;}
 .dogo-blank{ height:10px;margin: 0;padding: 0;}
-
+.cursor{cursor:pointer;}
 .dogo-flt{float: left;display: inline;}
 .dogo-frt{float: right;display: inline;}
 
 /*dogo-bg-gray*/
 .dogo-bg-gray{background-color: #eae8ee;border-radius: 5px;}
-
+.dogo-bg-white{background-color: #fff;}
 .dogo-radius{border: solid 6px rgba(255,255,255,1);
              -webkit-border-radius: 200px;
              -moz-border-radius: 200px;
              -o-border-radius: 200px;
              border-radius: 200px;
 }
-
-
-
 .dogo-title-bt{border: 1px solid #ccc;border-bottom: 1px solid #FF6347;
                -webkit-border-radius: 4px 4px 0 0;
                -moz-border-radius: 4px 4px 0 0;
                border-radius: 4px 4px 0 0;}
-.dogo-box-content{height: auto;}
+
 /*color*/
 .dogo-color-white{color: white;text-shadow: none;}
 .dogo-align-center{text-align: center;}
+.dogo-align-right{text-align: right;}
 /*border*/
 .dogo-border-notop{border: 1px solid #ccc;border-top: none;-webkit-border-radius: 0 0px 4px 4px;-moz-border-radius: 0px 0px 4px 4px;border-radius: 0px 0px 4px 4px;}
 .dogo-border-nobottom{border: 1px solid #ccc;border-bottom: none;-webkit-border-radius: 4px 4px 0 0;-moz-border-radius: 4px 4px 0 0;border-radius: 4px 4px 0 0;}
-.dogo-border-all{border: 1px solid #ccc;-webkit-border-radius: 4px 4px 4px 4px;-moz-border-radius: 4px 4px 4px 4px;border-radius: 4px 4px 4px 4px;}
+.dogo-border-all{border: 1px solid #D6CDCD;-webkit-border-radius: 4px 4px 4px 4px;-moz-border-radius: 4px 4px 4px 4px;border-radius: 4px 4px 4px 4px;}
+.dogo-border-all{
+    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.15),0 1px 5px rgba(0,0,0,0.075);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.15),0 1px 5px rgba(0,0,0,0.075);}
 
 
-.dogo-box-header{padding-left: 8px;height: 35px;}
-.dogo-box-header li.dogo-title-h{float: left;line-height: 35px;min-width: 80px;}
-.dogo-box-header li.dogo-more{width: 50px;line-height: 35px;float: right;}
-
-
-/*thumbnails*/
-
-.dogo-box-content .thumbnails{padding-left: 25px;padding-top: 5px;padding-bottom: 5px;}
-.dogo-box-content .thumbnails li{width: 134px;height: auto;float: left;margin: 5px;}
-.dogo-box-content .thumbnails img{width: 124px;height: 115px;}
-.dogo-box-content .thumbnails h3{height: 30px;line-height: 35px;overflow: hidden;font-size: 13px;overflow: hidden;text-align: center;font-weight: 500;}
-
-
-.dogo-box-text{padding: 5px 10px;}
-.dogo-box-text li{height: 25px;line-height: 25px; overflow: hidden;background: url(../images/icon_org.jpg) left center no-repeat;padding-left: 10px;}
-
-.dogo-box-text2{height: auto;overflow: hidden;padding: 5px 10px;}
-.dogo-box-text2 li{width: 165px;float: left;height: 25px;line-height: 25px; overflow: hidden;background: url(../images/icon_org.jpg) left center no-repeat;padding-left: 10px;}
-.dogo-box-text2 li:nth-of-type(odd){margin-right: 5px;}
-
-.dogo-box-rank{height: auto;overflow: hidden;padding: 5px 10px;}
-.dogo-box-rank li{height: 25px;line-height: 25px; overflow: hidden;}
-.dogo-box-rank li .rank-no{width: 18px;height: 17px;display: block;float: left;margin-top: 4px;line-height: 17px;margin-right: 5px;text-align: center;font-style: initial;}
-.dogo-box-rank li a{}
-.dogo-box-rank li i:nth-of-type(1){border: 1px solid #ccc;-webkit-border-radius: 3px 3px 3px 3px;-moz-border-radius: 3px 3px 3px 3px;border-radius: 3px 3px 3px 3px;}
-.dogo-box-rank li:nth-of-type(1) .rank-no,.dogo-box-rank li:nth-of-type(2) .rank-no,.dogo-box-rank li:nth-of-type(3) .rank-no{border: 1px solid #FF6347;background: #FF6347;color: #fff;-webkit-border-radius: 4px 4px 4px 4px;-moz-border-radius: 4px 4px 4px 4px;border-radius: 4px 4px 4px 4px;}
+/*dogo-box*/
+.dogo-box{height: auto;}
+.dogo-box-header{ margin: 5px 0;line-height: 30px;}
+.dogo-box-header h5{}
+.dogo-box-content{color: #706C6C;}
+.dogo-box-content p{font-size: 14px;}
+.dogo-box-footer{margin: 10px 5px;height: auto;line-height: 20px;}
 
 
 
-
-.dogo-box-textno{padding: 5px 10px;}
-.dogo-box-textno h3{text-align: center;height: 40px;}
-.dogo-box-textno p{height: 60px;line-height: 22px;overflow: hidden;padding-bottom: 5px;text-indent: 25px;overflow: hidden;}
-
-.block2{width: 120px;float: left;height: 150px;}
-
-
-
+.pagination .current{color: #ff7171;}
 .clearfix{*zoom:1}
 .clearfix:before,.clearfix:after{display:table;line-height:0;content:""}.clearfix:after{clear:both}
 
-.dogo-test{height: 300px;}
 
 /*会员中心菜单style*/
 .dogo-sidebar{}
@@ -105,18 +80,18 @@ a.dogo-nav-header{text-indent: 5px;}
 .dogo-sidebar .list-group .list-group-item.active,
 .dogo-sidebar .list-group .list-group-item.active:hover,
 .dogo-sidebar .list-group .list-group-item.active:focus {
-text-shadow: 0 -1px 0 #ff5400;
-background-image: -webkit-linear-gradient(top,#ff5400 0,#ff5400 100%);
-background-image: linear-gradient(to bottom,#ff5400 0,#ff5400 100%);
-background-repeat: repeat-x;
-border-color: #ff5400;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5400',endColorstr='#ff5400',GradientType=0);
+    text-shadow: 0 -1px 0 #ff5400;
+    background-image: -webkit-linear-gradient(top,#ff5400 0,#ff5400 100%);
+    background-image: linear-gradient(to bottom,#ff5400 0,#ff5400 100%);
+    background-repeat: repeat-x;
+    border-color: #ff5400;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5400',endColorstr='#ff5400',GradientType=0);
 }
 /*会员登录*/
 .dogo-input {margin: 5px 0;}
 .dogo-member{background-color: #eae8ee;border-radius: 5px;padding: 20px;overflow: hidden;}
 .dogo-member .btn-default{background: #ff5400;background-image: linear-gradient(to bottom,#ff5400 0,#ff5400 100%);
-background-repeat: repeat-x;border-color: #ff5400;}
+                          background-repeat: repeat-x;border-color: #ff5400;}
 .dogo-member .btn-default:hover,.dogo-member .btn-default:focus {background-color: #fc8043;border-color: #fc8043;background-position: 0 -45px;color: #fff;}
 .dogo-member p{line-height: 25px;overflow: hidden;}
 
