--- a/Public/Skin/Home/news/style/index.css
+++ b/Public/Skin/Home/news/style/index.css
@@ -2,14 +2,14 @@
 .dogo-page {}
 
 
-
+.dogo-section{padding-top: 10px;}
 /*dogo-home-top*/
-.dogo-home-top{height:auto;margin: 5px 0;color: #fff;text-align: center;text-shadow: 3px 3px 1px rgba(68, 65, 65, 0.5);}
+.dogo-home-top{height:auto;margin: 5px 0;color: #fff;text-align: center;text-shadow: 3px 4px 1px rgba(68, 65, 65, 0.5);}
 .dogo-home-top h1{text-shadow: 6px 4px 1px rgba(167, 72, 72, 0.5);}
 .dogo-home-top h2{font-family: "helvetica neue", helvetica, arial;font-weight: bold;}
 .dogo-home-top h3{margin-top: 10px;}
-.dogo-home-top h4{margin: 30px 0 0 0;}
-.dogo-home-top h2 span{color: #ff7171;margin: 0 5px;}
+.dogo-home-top h4{line-height: 30px;}
+.dogo-home-top h4 span{color: #ff7171;margin: 0 5px;}
 .dogo-home-top a{color: #fff;text-shadow: 3px 3px 1px rgba(68, 65, 65, 0.5);}
 .dogo-home-top a:hover{color: #ff7171;}
 
@@ -44,10 +44,10 @@
 }
 .dogo-index-thumb:hover .dogo-thumb-title{
     -webkit-transform: rotate(0deg) translate(0px,-200px);
-    -moz-transform: rotate(0deg) translate(0px,0px);
-    -o-transform: rotate(0deg) translate(0px,0px);
-    transform: rotate(0deg) translate(0px,0px);
-
+    -moz-transform: rotate(0deg) translate(0px,-200px);
+    -o-transform: rotate(0deg) translate(0px,-200px);
+    transform: rotate(0deg) translate(0px,-200px);
+    
     -webkit-transition:all 1s ease-in-out .5s;
     -moz-transition: all 1s ease-in-out .5s;
     -o-transition:all 1s ease-in-out .5s;
@@ -55,7 +55,7 @@
 }
 @media(min-width:768px){
     .dogo-home-top{height: 580px;}
-    .dogo-home-top h1{font-size: 60px;margin: 160px 0;}
+    .dogo-home-top h1{font-size: 60px;margin: 140px 0;}
     .dogo-home-top h2{font-size: 50px;}
     .dogo-box-footer .dogo-align{text-align: right;}
 }
@@ -66,6 +66,17 @@
 }
 
 .dogo-list-comment ul li{border: dotted 1px #EEE8E8;margin: 5px 0;padding: 5px;overflow: hidden;}
+
+
+
+
+
+
+
+
+
+
+
 
 .dogo-footer{margin: 20px 0;}
 
