--- a/Public/Skin/Home/blue/style/style.css
+++ b/Public/Skin/Home/blue/style/style.css
@@ -1,186 +1,86 @@
-/* CSS Document */
-/*header*/
-.dogo-header{width: 100%;height: 680px;display: block;overflow: hidden;background: #171a1f url(../images/bk_header.jpg) no-repeat center;padding-top: 103PX;}
-.dogo-top{text-align: center;}
-.dogo-top h1{margin-top: 103px;}
+/*page*/
+.dogo-page {height:auto;background: url(../images/wrapper.jpg) no-repeat;margin: 0 auto -120px;
+            background-attachment: fixed;
+            background-size: cover;
+            padding-bottom: 5%;}
 
-.dogo-top h1 {width:90px; height:90px; display:block; background:url(../images/mat2.png); background-size:90px 90px;margin: 0 auto;text-indent:-9000px;}
-.dogo-top h2{font-family: "helvetica neue", helvetica, arial;font-size: 50px;color: #ffffff;margin: 80px 0px 0px 0px;}
-.dogo-top h2 a{color: #ffffff;}
-.dogo-top h2 span{color: #ff2a00;margin: 0 3px;}
-.dogo-top h4{font-family: "helvetica neue", helvetica, arial;font-size: 30px;line-height: 70px;color: #ffffff;font-weight: 200;}
-.dogo-top h4 span{color: #ff2a00;margin: 0 3px;}
-.dogo-top h3{color: #fff;}
 
-.dogo-section{width: 100%;height: 680px;}
 
-/*dogo-website*/
-.dogo-website{color: #fff;margin-top:30px;overflow: hidden;display: block;}
-.dogo-website .dogo-content{
-    height: 224px;
-    padding: 1px;
-    width: 224px;
-    overflow: hidden;
-    display: block;
-    position: relative;
-    background: #b4b1b1;
-    cursor: pointer;
+/*header
+.dogo-header .navbar{background-image: -webkit-linear-gradient(top,#343742 0,#343742 100%);
+background-image: linear-gradient(to bottom,#343742 0,#343742 100%);box-shadow: 0 3px 3px rgba(0, 0, 0, 0.7);}
+*/
+.dogo-header .dogo-header-navbar{
+    background: rgba(0, 0, 0, 0.16);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2F323A', endColorstr='rgba(0, 0, 0, 0.69)', GradientType=0);
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    border: inset 1px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 1px rgba(255,255,255,0.8);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,0.8);
+    box-shadow: 0 0 1px rgba(255,255,255,0.8);
 }
+.dogo-header .dogo-header-navbar a,.dogo-header .dogo-header-navbar .navbar-nav>li>a{color: #fff;text-shadow: 0 1px 0 rgba(255,255,255,.25);}
+.dogo-header-navbar a:hover,.dogo-header-navbar .navbar-nav>li>a:hover,.dogo-header-navbar .navbar-nav>li>a:focus{color: #fff;}
 
-.dogo-website .dogo-content img{
-    width: 210px;
-    height: 210px;
-    border-radius: 200px;
-    opacity: 1;
-}
+.navbar-default .navbar-nav>.open>a, 
+.navbar-default .navbar-nav>.open>a:hover, 
+.navbar-default .navbar-nav>.open>a:focus{background: rgba(255,255,255,.25);color: #fff;}
 
-.dogo-website .dogo-content img{
-    -webkit-transform: rotate(0deg) translate(0px,0px);
-    -moz-transform: rotate(0deg) translate(0px,0px);
-    -o-transform: rotate(0deg) translate(0px,0px);
-    transform: rotate(0deg) translate(0px,0px);
-
-    -webkit-transition:all 2s ease-in-out .5s;
-    -moz-transition: all 2s ease-in-out .5s;
-    -o-transition:all 2s ease-in-out .5s;
-    transition:all 2s ease-in-out .5s;
-
-    -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -o-transform-origin: center center;
-    transform-origin: center center;
-}
-.dogo-website .dogo-content .dogo-mask{
-    position: absolute;
-    height: 106px;
-    width: 212px;
-    left: 0;
-    top: 0;
-}
-.dogo-website .dogo-content .dogo-mask-1{
-    -webkit-transform: rotate(0deg) translate(0px,-115px);
-    -moz-transform: rotate(0deg) translate(0px,-115px);
-    -o-transform: rotate(0deg) translate(0px,-115px);
-    transform: rotate(0deg) translate(0px,-115px);
-
-    -webkit-transition:all 2s ease-in-out .5s;
-    -moz-transition: all 2s ease-in-out .5s;
-    -o-transition:all 2s ease-in-out .5s;
-    transition:all 2s ease-in-out .5s;
-    
-    -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -o-transform-origin: center center;
-    transform-origin: center center;
-}
-.dogo-website .dogo-content .dogo-mask-2{
-    -webkit-transform: rotate(0deg) translate(0px,218px);
-    -moz-transform: rotate(0deg) translate(0px,218px);
-    -o-transform: rotate(0deg) translate(0px,218px);
-    transform: rotate(0deg) translate(0px,218px);
-
-    -webkit-transition:all 2s ease-in-out .5s;
-    -moz-transition: all 2s ease-in-out .5s;
-    -o-transition:all 2s ease-in-out .5s;
-    transition:all 2s ease-in-out .5s;
-    
-    -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -o-transform-origin: center center;
-    transform-origin: center center;
-}
-.dogo-website .dogo-content .dogo-mask-1 a{
-    display: block;
-    text-align: center;
-    line-height: 28px;
-    width: 80px;
-    height: 30px;
-    background: #fff;
-    background: rgba(255,255,255,0.5);
+.dropdown-menu {background: rgba(255,255,255,.25);}
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
     color: #fff;
-    margin: 20px auto 0px;
-    border-radius: 5px;
-    border: 1px solid rgba(255,255,255,0.5);
-    box-shadow: 1px rgba(255,255,255,0.7);
-}
-.dogo-website .dogo-content .dogo-mask-2 a{
-    display: block;
-    text-align: center;
-    line-height: 30px;
-    width: 120px;
-    height: 40px;
-    background: #fff;
-    background: rgba(255,255,255,.7);
-    color: #096;
-    margin: 40px auto 0;
-    border-radius: 6px;
-    border: 1px solid rgba(255,255,255,0.5);
-    box-shadow: 1px rgba(255,255,255,0.7);
-}
-.dogo-website .dogo-content .dogo-mask-1 a:hover{
-    background: #fff;
-    background: rgba(255,255,255,.5);
-    color: #096;
-}
-.dogo-website .dogo-content .dogo-mask-2 a:hover{
-    background: #fff;
-    background: rgba(255,255,255,.7);
-    color: #096;
-    border: 1px solid rgba(0,153,102,0.1);
-    box-shadow:1px 1px 1px 1px rgba(0,153,102,0.1);
-}
-.dogo-website .dogo-content:hover img{
-    opacity: 0.4;
-    -webkit-transform: rotate(360deg) translate(0px,0px);
-    -moz-transform: rotate(360deg) translate(0px,0px);
-    -o-transform: rotate(360deg) translate(0px,0px);
-    transform: rotate(360deg) translate(0px,0px);
-
-    -webkit-transition:all 2s ease-in-out .5s;
-    -moz-transition: all 2s ease-in-out .5s;
-    -o-transition:all 2s ease-in-out .5s;
-    transition:all 2s ease-in-out .5s;
-    
-    -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -o-transform-origin: center center;
-    transform-origin: center center;
-}
-
-.dogo-website .dogo-content:hover .dogo-mask-1{
-    -webkit-transform: rotate(0deg) translate(0px,0px);
-    -moz-transform: rotate(0deg) translate(0px,0px);
-    -o-transform: rotate(0deg) translate(0px,0px);
-    transform: rotate(0deg) translate(0px,0px);
-
-    -webkit-transition:all 2s ease-in-out .5s;
-    -moz-transition: all 2s ease-in-out .5s;
-    -o-transition:all 2s ease-in-out .5s;
-    transition:all 2s ease-in-out .5s;
-    
-    -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -o-transform-origin: center center;
-    transform-origin: center center;
-}
-.dogo-website .dogo-content:hover .dogo-mask-2{
-    -webkit-transform: rotate(0deg) translate(0px,106px);
-    -moz-transform: rotate(0deg) translate(0px,106px);
-    -o-transform: rotate(0deg) translate(0px,106px);
-    transform: rotate(0deg) translate(0px,106px);
-
-    -webkit-transition:all 2s ease-in-out .5s;
-    -moz-transition: all 2s ease-in-out .5s;
-    -o-transition:all 2s ease-in-out .5s;
-    transition:all 2s ease-in-out .5s;
-    
-    -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -o-transform-origin: center center;
-    transform-origin: center center;
+    background-image: -webkit-linear-gradient(top,#0796C3 0,#0796C3 100%);
+    background-image: linear-gradient(to bottom,#0796C3 0,#0796C3 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0796C3', endColorstr='#0796C3', GradientType=0);
+    background-color: #0796C3;
 }
 
 
-/*footer*/
-.dogo-footer{height: 170px;}
-.dogo-footer:after{background-image: url(images/bg_wen.png);}
+.dogo-test2{height: 800px;background: #096;margin-top: 100px;}
+.dogo-test3{height: 800px;background: #066;margin-top: 100px;}
+
+.dogo-bg{background: rgba(255, 255, 255, 0);}
+
+.dogo-test-input{margin: 10px;padding-top: 15px;color: #fff;}
+.dogo-test-input .dogo-test4{background: rgba(255, 255, 255, 0);color: #fff;border: 1px solid rgba(255, 255, 255, 0.4);;
+
+}
+.dogo-border-search{margin: 10px;border: 1px solid rgba(255, 255, 255, 0.4);;
+                    -webkit-border-radius: 4px 4px 4px 4px;
+                    -moz-border-radius: 4px 4px 4px 4px;
+                    -o-border-radius: 4px 4px 4px 4px;
+                    border-radius: 4px 4px 4px 4px;
+                    color: #fff;
+                    padding: 10px;
+}
+.dogo-border-search ul{}
+.dogo-border-search li{line-height: 25px;}
+.dogo-border-search li a{color: #fff;display: block;}
+.dogo-border-search li a:hover{color: #fff;font-weight: 800;}
+
+
+
+
+
+
+
+
+@media (min-width: 1200px){
+    .container {width: 100%;}
+}
+@media(min-width:768px){
+
+}
+@media(max-width:768px){
+
+}
+
+@media(min-width:768px){
+
+}
+@media(max-width:768px){
+
+}
+
