--- a/Public/Skin/Home/news/style/common.css
+++ b/Public/Skin/Home/news/style/common.css
@@ -120,3 +120,17 @@ ul.dogo-text-onelines li a:hover{color: #FF6347;}
 .dogo-text-links a{margin: 0 5px;line-height: 28px;}
 
 
+@media(min-width:767px){
+
+}
+@media (max-width: 767px){
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+        color: #fff;
+    }
+}
+
+
+
+
+
+
