修正blue模板背景图片xy重复

--- a/Public/Skin/Home/blue/style/style.css
+++ b/Public/Skin/Home/blue/style/style.css
@@ -1,8 +1,6 @@
 /*page*/
-.dogo-page {height:auto;background: url(../images/wrapper.jpg) no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-            padding-bottom: 5%;}
+.dogo-page {height:auto;background: url(../images/wrapper.jpg) repeat 0 0;
+            }
 
 
 
