--- a/Public/Skin/Home/blue/style/common.css
+++ b/Public/Skin/Home/blue/style/common.css
@@ -167,3 +167,4 @@ ul.dogo-text-more li{display: block;float: left;margin: 5px 8px;}
     border: 1px solid rgba(255, 255, 255, 0.54);
 }
 
+.dogo-dialog-modal img{max-width: 100%;}
