--- a/Public/Skin/Shop/default/style/style.css
+++ b/Public/Skin/Shop/default/style/style.css
@@ -1,8 +1,5 @@
 /*page*/
-.dogo-page {height:auto;background:rgba(212, 36, 236, 0.53) url(../images/bg-purple.jpg) no-repeat;margin: 0 auto -120px;
-            background-attachment: fixed;
-            background-size: cover;
-            padding-bottom: 5%;}
+.dogo-page {height:auto;}
 
 
 
@@ -11,7 +8,7 @@
 background-image: linear-gradient(to bottom,#343742 0,#343742 100%);box-shadow: 0 3px 3px rgba(0, 0, 0, 0.7);}
 */
 .dogo-header .dogo-header-navbar{
-    background: rgba(32, 17, 17, 0.21);
+    background: rgba(250, 13, 13, 0.75);
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2F323A', endColorstr='rgba(0, 0, 0, 0.69)', GradientType=0);
     border-bottom: 1px solid rgba(0,0,0,0.1);
@@ -25,9 +22,14 @@ background-image: linear-gradient(to bottom,#343742 0,#343742 100%);box-shadow: 
 
 .navbar-default .navbar-nav>.open>a, 
 .navbar-default .navbar-nav>.open>a:hover, 
-.navbar-default .navbar-nav>.open>a:focus{background: rgba(199, 66, 250, 0.69);color: #fff;}
-.dropdown-menu {background: rgba(199, 66, 250, 0.69);}
+.navbar-default .navbar-nav>.open>a:focus{background: rgba(255, 255, 255, 1);color: #000;}
+.dropdown-menu {background: rgba(255, 255, 255, 0.69);}
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+    color: rgba(255, 255, 255, 0.95);
+    background-color: transparent;
+}
 
+.dogo-header ul.dropdown-menu>li>a{color: #000;}
 .dogo-box-bg{height: auto;margin: 80px 0 20px 0;}
 
 .dogo-bg{background: #333;background: url('../images/transparent.png') repeat;}
@@ -50,19 +52,6 @@ background-image: linear-gradient(to bottom,#343742 0,#343742 100%);box-shadow: 
 .dogo-border-search li a:hover{}
 
 
-.bx-wrapper .bx-viewport{
-    background: rgba(255, 255, 255, 0.3);
-    border: solid rgba(0, 0, 0, 0.2) 5px;
-}
-.bx-wrapper .bx-caption{
-    background: rgba(80, 80, 80, 0.21);
-}
-.bx-wrapper .bx-pager.bx-default-pager a{
-    background: #fff;
-}
-.bx-wrapper .bx-pager.bx-default-pager a:hover, .bx-wrapper .bx-pager.bx-default-pager a.active {
-    background: #f00;
-}
 
 .bxslider li img{height: 400px;}
 
@@ -70,10 +59,11 @@ background-image: linear-gradient(to bottom,#343742 0,#343742 100%);box-shadow: 
 
 
 .dogo-index-row{height:auto;}
-.dogo-index-row :hover .dogo-index-thumb {width: auto;border: 8px solid #f7f7f7;}
+.dogo-index-row :hover .dogo-index-thumb {}
 
 .dogo-index-thumb{ overflow: hidden;height: 300px;}
-.dogo-index-thumb{border-radius: 5px;border:8px solid #fff;margin: 10px 0px;background: #fff;}
+.dogo-index-thumb{border-radius: 5px;border: 8px solid rgba(53, 53, 53, 0.14);
+                  margin: 10px 0px;background: #fff;}
 .dogo-index-thumb img{width: auto;}
 
 .dogo-index-thumb .dogo-thumb-pic{height: 250px;cursor: pointer;}
@@ -94,7 +84,8 @@ background-image: linear-gradient(to bottom,#343742 0,#343742 100%);box-shadow: 
 .dogo-index-thumb .dogo-thumb-title p{height: 160px;overflow: hidden;}
 .dogo-index-thumb .dogo-thumb-title span a{
     height: 30px;display: block;
-    border: 1px solid #F1A5A2;border-radius: 5px;
+    border: 1px solid #F1A5A2;
+    border-radius: 5px;
     margin: 5px;line-height: 30px;cursor: pointer;
     background: rgba(250,250,250,0.3);
 }
@@ -103,7 +94,7 @@ background-image: linear-gradient(to bottom,#343742 0,#343742 100%);box-shadow: 
     -moz-transform: rotate(0deg) translate(0px,-300px);
     -o-transform: rotate(0deg) translate(0px,-300px);
     transform: rotate(0deg) translate(0px,-300px);
-    
+
     -webkit-transition:all 1s ease-in-out .5s;
     -moz-transition: all 1s ease-in-out .5s;
     -o-transition:all 1s ease-in-out .5s;
@@ -132,7 +123,13 @@ background-image: linear-gradient(to bottom,#343742 0,#343742 100%);box-shadow: 
 
 }
 @media(max-width:768px){
-
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+        color: #FDF8F8;
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
+        color: #fff;
+    }
+    .dogo-list-box{height: auto;}
 }
 
 
